finals changes done
